--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Account: {{ user_name }}{% endblock %}</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {% block head %}{% endblock %}
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="{% url 'login' %}">Login</a></li>
-    </ul>
-  </nav>
-  {% block content %}{% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="margin-left:4%;" href="{% url 'home' user_name %}">FakeCSV</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <span class="nav-link">Schemas <span class="sr-only">(current)</span></span>
+            </li>
+        </ul>
+    </div>
+    <div style="margin-right: 4%;">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <span class="nav-link">Hello, <strong>{{ user_name }}</strong></span>
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+{% block content %}{% endblock %}
 </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </html>
