--- a/templates/login.html
+++ b/templates/login.html
@@ -1,55 +1,15 @@
 {% load static %}
+<html>
+<head>
+    <title>Login</title>
 
-<link rel="stylesheet" href="{% static 'css/login.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 <style>
-.card {
-box-sizing: border-box;
 
-position: absolute;
-width: 60%;
-height: 445px;
-left: 20%;
-top: 20%;
 
-background: #FFFFFF;
-border: 1px solid #E5E5E5;
-border-radius: 4px;
-}
-
-h2 {
-position: absolute;
-width: 86px;
-height: 79px;
-left: 47%;
-top: 5%;
-
-font-family: 'Helvetica Neue';
-font-style: normal;
-font-weight: 300;
-font-size: 36px;
-line-height: 79px;
-/* identical to box height, or 219% */
-
-display: flex;
-align-items: flex-end;
-
-color: #373A3C;
-}
-
-.submit {
-box-sizing: border-box;
-
-position: absolute;
-width: 85px;
-height: 38px;
-left: 57.6%;
-top: 63%;
-
-background: #0275D8;
-border: 1px solid #0275D8;
-border-radius: 4px;
-}
 </style>
 
 <div class="card">
@@ -60,3 +20,5 @@ border-radius: 4px;
         <button class="submit" type="submit">Login</button>
     </form>
 </div>
+
+</html>
