--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <span class="nav-link">Schemas <span class="sr-only">(current)</span></span>
+                <a class="nav-link" href="{% url 'home' user_name %}">Schemas <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
