--- a/templates/dashboard-create.html
+++ b/templates/dashboard-create.html
@@ -6,19 +6,97 @@
 {% endblock %}
 
 {% block content %}
-<div class="container" style="margin-top: 25px; margin-left:5%;">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="title">New schema</div>
-        </div>
-        <div class="col-md-2">
-            <a type="button" class="btn btn-primary" href="{% url 'create' user_name %}">Submit</a>
+<form method="post" id="my-form">
+    {% csrf_token %}
+    <div class="container" style="margin-top: 25px; margin-left:5%;">
+        <div class="row">
+            <div class="col-md-7">
+                <div class="title">New schema</div>
+            </div>
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </div>
     </div>
-</div>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="submit" type="submit">Add Column</button>
+
+    <label for="name">Name:</label>
+    <input type="text" name="name" id="name">
+    <div class="title">Fields</div>
+    <div id="fields-container">
+        <!-- Dynamic fields will be added here -->
+    </div>
+    <button type="button" class="btn btn-primary" id="add-field">Add Field</button>
 </form>
+
+<script>
+var tagId = 0;
+
+function addField() {
+  tagId++;
+  var container = document.getElementById("fields-container");
+
+  // Create input field
+  var input = document.createElement("input");
+  input.id = "tag-" + tagId;
+  input.type = "text";
+  input.className = "form-control";
+  input.style = "width: 150px;";
+  input.name = "dynamic-key"; // Use brackets to make it an array
+  input.placeholder = "Field Name";
+  container.appendChild(input);
+
+  // Create select field
+  var select = document.createElement("select");
+  select.className = "custom-select mr-sm-2";
+  select.id = "select-" + tagId;
+  select.style = "width: 150px;";
+  select.name = "dynamic-value";
+  container.appendChild(select);
+
+  // Add default option to select field
+  var option = document.createElement("option");
+  option.value = "";
+  option.disabled = true;
+  option.selected = true;
+  option.label = "Select Field Type";
+  select.appendChild(option);
+
+  // Add other options to select field
+  var option1 = document.createElement("option");
+  option1.value = "1";
+  option1.innerHTML = "value1"
+  select.appendChild(option1);
+
+  // Create delete button
+  var deleteBTN = document.createElement("a");
+  deleteBTN.style.color = "red";
+  deleteBTN.id = "delete-" + tagId;
+  deleteBTN.innerHTML = "Delete";
+  var currentId = tagId;
+  deleteBTN.addEventListener("click", function() {
+    delField(currentId);
+  });
+  container.appendChild(deleteBTN);
+
+  var br = document.createElement("br");
+  br.id = "br-" + tagId;
+  container.appendChild(br);
+}
+
+function delField(id) {
+  var delTag = document.getElementById("tag-" + id);
+  var delSec = document.getElementById("select-" + id);
+  var delDel = document.getElementById("delete-" + id);
+  var delBr = document.getElementById("br-" + id);
+  delTag.parentNode.removeChild(delTag);
+  delSec.parentNode.removeChild(delSec);
+  delDel.parentNode.removeChild(delDel);
+  delBr.parentNode.removeChild(delBr);
+}
+
+document.getElementById("add-field").addEventListener("click", addField);
+
+
+</script>
+
 {% endblock %}
