--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,8 +2,6 @@
 {% load static %}
 
 
-
-
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 {% endblock %}
@@ -17,6 +15,42 @@
         </div>
         <div class="col-md-2">
             <a type="button" class="btn btn-success" href="{% url 'create' user_name %}">New schema</a>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: 25px; margin-left:5%;">
+    <div class="row">
+        <div class="col-md-9">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Modified</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td><a href="" style="color:light-blue;">Mark</a></td>
+                    <td>Otto</td>
+                    <td style="width:25%;"><a href="" style="color:light-blue;">Edit scheme</a><a href="" style="color:red; padding-left:15px;">Delete</a></td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td><a href="" style="color:light-blue;">Jacob</a></td>
+                    <td>Thornton</td>
+                    <td><a href="" style="color:light-blue;">Edit scheme</a><a href="" style="color:red; padding-left:15px;">Delete</a></td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td><a href="" style="color:light-blue;">Jacob</a></td>
+                    <td>Thornton</td>
+                    <td><a href="" style="color:light-blue;">Edit scheme</a><a href="" style="color:red; padding-left:15px;">Delete</a></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
