Fix BUG with Schema Create Form ✅ Add integer range in field

--- a/templates/dashboard-create.html
+++ b/templates/dashboard-create.html
@@ -29,119 +29,5 @@
     </div>
 </form>
 
-<script>
-var tagId = 0;
-
-function addField() {
-  tagId++;
-  var container = document.getElementById("fields-container");
-
-  // Create row div for fields
-  var container_item_1 = document.createElement("div");
-  container_item_1.id = "item-1-" + tagId;
-  container_item_1.className = "form-group col-md-6";
-  container.appendChild(container_item_1);
-
-  var container_item_2 = document.createElement("div");
-  container_item_2.id = "item-2-" + tagId;
-  container_item_2.className = "form-group col-md-4";
-  container.appendChild(container_item_2);
-
-  // Create label for field
-  var label1 = document.createElement("label");
-  label1.setAttribute("for", "inputName");
-  label1.id = "label-1-" + tagId;
-  label1.innerHTML = "Column name";
-  container_item_1.appendChild(label1);
-
-  // Create input field
-  var input = document.createElement("input");
-  input.id = "tag-" + tagId;
-  input.type = "text";
-  input.className = "form-control";
-  input.style.width = "150px";
-  input.setAttribute("name", "dynamic-key[]");
-  container_item_1.appendChild(input);
-
-  // Create label for selection field
-  var label2 = document.createElement("label");
-  label2.setAttribute("for", "inputType");
-  label2.id = "label-2-" + tagId;
-  label2.innerHTML = "Type";
-  container_item_2.appendChild(label2);
-
-  var br = document.createElement("br");
-
-  container_item_2.appendChild(br);
-
-  // Create selection field
-  var select = document.createElement("select");
-  select.className = "custom-select mr-sm-2";
-  select.id = "select-" + tagId;
-  select.style.width = "150px";
-  select.setAttribute("name", "dynamic-value[]");
-  container_item_2.appendChild(select);
-
-  // Add default option to select field
-  var option = document.createElement("option");
-  option.value = "string";
-  option.disabled = false;
-  option.selected = true;
-  option.label = "String";
-  select.appendChild(option);
-
-  // Add other options to select field
-  var option1 = document.createElement("option");
-  option1.value = "integer";
-  option1.innerHTML = "Integer";
-  select.appendChild(option1);
-
-  var option2 = document.createElement("option");
-  option2.value = "float";
-  option2.innerHTML = "Float";
-  select.appendChild(option2);
-
-  var option3 = document.createElement("option");
-  option3.value = "bool";
-  option3.innerHTML = "Boolean";
-  select.appendChild(option3);
-
-  var option4 = document.createElement("option");
-  option4.value = "date";
-  option4.innerHTML = "Date";
-  select.appendChild(option4);
-
-  // Create delete button
-  var deleteBTN = document.createElement("a");
-  deleteBTN.style.color = "red";
-  deleteBTN.id = "delete-" + tagId;
-  deleteBTN.innerHTML = "Delete";
-  deleteBTN.addEventListener("click", function() {
-    delField(tagId);
-  });
-  container.appendChild(deleteBTN);
-
-  var br = document.createElement("br");
-  br.id = "br-" + tagId;
-  container.appendChild(br);
-}
-
-function delField(id) {
-  var delTag = document.getElementById("tag-" + id);
-  var delSec = document.getElementById("select-" + id);
-  var delDel = document.getElementById("delete-" + id);
-  var delBr = document.getElementById("br-" + id);
-  delTag.parentNode.removeChild(delTag);
-  delSec.parentNode.removeChild(delSec);
-  delDel.parentNode.removeChild(delDel);
-  delBr.parentNode.removeChild(delBr);
-}
-
-document.getElementById("add-field").addEventListener("click", addField);
-
-
-
-
-</script>
-
+<script src="{% static 'js/form-create.js' %}"></script>
 {% endblock %}
