--- a/templates/dashboard-create.html
+++ b/templates/dashboard-create.html
@@ -24,7 +24,7 @@
         <label for="name" class="label">Column separator</label><br>
         <select name="separators" id="separators" class="custom-select" style="width:200px">
             <option value = "comma" label='Comma (,)'></option>
-            <option value = "dot-comma">Dot&comma (;)</option>
+            <option value = "dot-comma">Dot comma (;)</option>
         </select><br><br>
         <label for="name" class="label">String character</label><br>
         <select name="character" id="character" class="custom-select" style="width:200px">
