Fix integer input in data-edit scheme

--- a/templates/dashboard-edit.html
+++ b/templates/dashboard-edit.html
@@ -210,7 +210,7 @@ function fields(i) {
         var input1 = document.createElement("input");
         input1.id = "int-field-2-" + tagId;
         input1.type = "number";
-        input.value = my_values[i][1];
+        input1.value = my_values[i][1];
         input1.className = "form-control";
         input1.style.width = "70px";
         input1.setAttribute("name", "integer-value[]");
